fixes #27 – smaller on narrow screens

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -30,6 +30,12 @@ p a {
     }
 }
 
+@media screen and (min-width: 768px) {
+    #logo {
+        width: 150px;
+    }
+}
+
 .ghc-spodek a {
     color: $primary;
 }
